# pytorch-tutorial

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml
src/: tutorial.ipynb
