[project]
authors = [{ name = "yuta-nishi" }]
description = "pytorch tutorial"
name = "pytorch-tutorial"
readme = "README.md"
requires-python = ">= 3.10"
version = "1.0.0"

[tool.black]
line-length = 90

[tool.ruff]
ignore = []
line-length = 90
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "W", # pycodestyle warnings
]
