[project]
authors = [{ name = "yuta-nishi", email = "ypmtk437.0209@gmail.com" }]
dependencies = ["torch>=2.2.2"]
description = "Add your description here"
name = "workspace"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = ["ruff>=0.4.1"]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workspace"]
